# src/routes/categories.routes.ts
@@ -1,9 +1,10 @@
-import { request, Router } from "express";
+import { Router } from "express";
 import multer from "multer";
 
-import { createCategoryController } from "../modules/cars/useCases/createCategory";
-import { importCategoryController } from "../modules/cars/useCases/importCategory";
-import { listCategoriesController } from "../modules/cars/useCases/listCategories";
+import { CreateCategoryController } from "../modules/cars/useCases/createCategory/CreateCategoryController";
+
+import { ImportCategoryController } from "../modules/cars/useCases/importCategory/ImportCategoryController";
+import { ListCategoriesController } from "../modules/cars/useCases/listCategories/listCategoriesController";
 
 const categoriesRouter = Router();
 
@@ -11,16 +12,18 @@ const upload = multer({
   dest: "./tmp",
 });
 
-categoriesRouter.post("/", (request, response) => {
-  return createCategoryController.handle(request, response);
-});
+const createCategoryController = new CreateCategoryController();
+const importCategoryController = new ImportCategoryController();
+const listCategoriesController = new ListCategoriesController();
 
-categoriesRouter.get("/", (request, response) => {
-  return listCategoriesController.handle(request, response);
-});
+categoriesRouter.post("/", createCategoryController.handle);
 
-categoriesRouter.post("/import", upload.single("file"), (request, response) => {
-  return importCategoryController.handle(request, response);
-});
+categoriesRouter.get("/", listCategoriesController.handle);
+
+categoriesRouter.post(
+  "/import",
+  upload.single("file"),
+  importCategoryController.handle
+);
 
 export { categoriesRouter };
