# src/routes/specifications.routes.ts
@@ -1,17 +1,11 @@
 import { Router } from "express";
 
-import { createSpecificationController } from "../modules/cars/useCases/createSpecification";
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
 
 const specificationsRouter = Router();
 
-specificationsRouter.post("/", (request, response) => {
-  return createSpecificationController.handle(request, response);
-});
+const createSpecificationController = new CreateSpecificationController();
 
-/*
-specificationsRouter.get("/", (request, response) => {
-  return response.json(specificationsRepository.list());
-});
-*/
+specificationsRouter.post("/", createSpecificationController.handle);
 
 export { specificationsRouter };
